Fixed bug which occurred while deleting film
